# GraphqlSample

./: .gitignore  pyproject.toml
apps/apps/: schema.py  settings.py  urls.py
apps/sample/: schema.py
apps/sample/management/commands/: createqrcode.py
docker/: Dockerfile  requirements.txt
