[tool.poetry]
name = "graphqlsample"
version = "0.1.0"
description = ""
authors = ["Jun Izumida <jun.izumida@agc.com>"]

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.4.2"
Django = "^4.2.7"
graphene-django = "^3.1.5"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
